--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animated-heart": "^0.0.8",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "typescript": "^4.9.5",
