--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-animated-heart": "^0.0.8",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.1",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "html-webpack-plugin": "^5.6.0"
   }
 }
